Only include xml files in ./WaylandXml

--- a/DebugSourceGenerator/DebugSourceGenerator.csproj
+++ b/DebugSourceGenerator/DebugSourceGenerator.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
     
     <ItemGroup>
-        <AdditionalFiles Include="./**/*.xml" />
+        <AdditionalFiles Include="WaylandXml/*.xml" />
     </ItemGroup>
 
 </Project>
